--- a/index.html
+++ b/index.html
@@ -35,21 +35,46 @@
     <hr>
     <h2>Currency converter</h2>
     <input name="amount" id="amount" type="number" placeholder="100">
-    <select id="convertFrom" name="convertFrom">
-        <option selected>NOK</option>
+ 
+    <label for="convertFrom">From:</label>
+    <input list="convertFromSymbols" id="convertFrom" name="convertFrom" placeholder="Type a currency code"> 
+    <datalist id="convertFromSymbols">
+        <option value="NOK">Norske Kroner (NOK)</option>
         <option>EUR</option>
         <option>GBP</option>
         <option>USD</option>
-    </select>
-    <select id="convertTo" name="convertTo">
+    </datalist>
+
+    <label for="convertTo">To:</label>
+    <input list="convertToSymbols" id="convertTo" name="convertTo" placeholder="Type a currency code">
+    <datalist id="convertToSymbols">        
         <option>NOK</option>
         <option>EUR</option>
-        <option selected>GBP</option>
+        <option>GBP</option>
         <option>USD</option>
-    </select>
+    </datalist>
     <button type="submit" id="submit-currency">Convert</button>
     <span id="currency-result"></span>
 
-    <hr>    
+    <hr> 
+    <h2>Filter/Search Amiibos</h2>
+    <input id="search-amiibos" name="search-amiibos" placeholder="Search for amiibo characters"> 
+
+    Include search for: 
+    <label for="amiibo-name">Full Name</label>
+    <input id="amiibo-name" name="amiibo-name" type="checkbox">
+    
+    <label for="amiibo-game">Game Series</label>
+    <input id="amiibo-game" name="amiibo-game" type="checkbox">
+    
+    <label for="amiibo-series">Amiibo Series</label>
+    <input id="amiibo-series" name="amiibo-series" type="checkbox">
+
+    <button id="openAll">Open all boxes</button> 
+    <button id="closeAll">Close all boxes</button>
+
+    <div id="amiibos" style="display: grid; grid-template-columns: auto auto auto auto; margin-top: 20px;"></div>
+    <hr>
+    <p>EOF</p>
 </body>
 </html>
