--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utilities...</title>
     <script type="module" src="index.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Utilities</h1>
@@ -73,7 +74,7 @@
     <button id="openAll">Open all boxes</button> 
     <button id="closeAll">Close all boxes</button>
 
-    <div id="amiibos" style="display: grid; grid-template-columns: auto auto auto auto; margin-top: 20px;"></div>
+    <div id="amiibos"></div>
     <hr>
     <p>EOF</p>
 </body>
